# sit-vr-viewport-prediction

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
config/: ieee2020.toml
datasets/: README.md
datasets/has_subtitle/_video_05_user_09/: raw_head_orientation_log.json
datasets/has_subtitle/video_01_user_02/: processed_data.csv  raw_head_orientation_log.json
datasets/has_subtitle/video_01_user_03/: processed_data.csv  raw_head_orientation_log.json
datasets/has_subtitle/video_01_user_05/: processed_data.csv  raw_head_orientation_log.json
datasets/has_subtitle/video_01_user_06/: processed_data.csv  raw_head_orientation_log.json
datasets/has_subtitle/video_01_user_07/: processed_data.csv  raw_head_orientation_log.json
datasets/has_subtitle/video_01_user_11/: processed_data.csv  raw_head_orientation_log.json
datasets/has_subtitle/video_01_user_12/: processed_data.csv  raw_head_orientation_log.json
datasets/has_subtitle/video_01_user_14/: processed_data.csv  raw_head_orientation_log.json
datasets/has_subtitle/video_01_user_15/: processed_data.csv  raw_head_orientation_log.json
datasets/has_subtitle/video_02_user_01/: processed_data.csv  raw_head_orientation_log.json
datasets/has_subtitle/video_02_user_03/: processed_data.csv  raw_head_orientation_log.json
datasets/has_subtitle/video_02_user_04/: processed_data.csv  raw_head_orientation_log.json
datasets/has_subtitle/video_02_user_05/: processed_data.csv  raw_head_orientation_log.json
datasets/has_subtitle/video_02_user_08/: processed_data.csv  raw_head_orientation_log.json
datasets/has_subtitle/video_02_user_09/: processed_data.csv  raw_head_orientation_log.json
datasets/has_subtitle/video_02_user_10/: processed_data.csv  raw_head_orientation_log.json
datasets/has_subtitle/video_02_user_13/: processed_data.csv  raw_head_orientation_log.json
datasets/has_subtitle/video_02_user_15/: processed_data.csv  raw_head_orientation_log.json
datasets/has_subtitle/video_03_user_01/: processed_data.csv  raw_head_orientation_log.json
datasets/has_subtitle/video_03_user_02/: processed_data.csv  raw_head_orientation_log.json
datasets/has_subtitle/video_03_user_04/: processed_data.csv  raw_head_orientation_log.json
datasets/has_subtitle/video_03_user_06/: processed_data.csv  raw_head_orientation_log.json
datasets/has_subtitle/video_03_user_07/: processed_data.csv  raw_head_orientation_log.json
datasets/has_subtitle/video_03_user_11/: processed_data.csv  raw_head_orientation_log.json
datasets/has_subtitle/video_03_user_12/: processed_data.csv  raw_head_orientation_log.json
datasets/has_subtitle/video_03_user_13/: processed_data.csv  raw_head_orientation_log.json
datasets/has_subtitle/video_03_user_14/: processed_data.csv  raw_head_orientation_log.json
datasets/has_subtitle/video_04_user_01/: processed_data.csv  raw_head_orientation_log.json
datasets/has_subtitle/video_04_user_03/: processed_data.csv  raw_head_orientation_log.json
datasets/has_subtitle/video_04_user_04/: processed_data.csv  raw_head_orientation_log.json
datasets/has_subtitle/video_04_user_05/: processed_data.csv  raw_head_orientation_log.json
datasets/has_subtitle/video_04_user_08/: processed_data.csv  (+1 more)
datasets/videos/: video_01_subtitle.srt  video_01_subtitle_original.srt  video_02_subtitle.srt  video_02_subtitle_original.srt  video_03_subtitle.srt  video_03_subtitle_original.srt  video_04_subtitle.srt  video_04_subtitle_original.srt  video_05_subtitle.srt  video_05_subtitle_original.srt
notebooks/: Data_Visualization.Rmd
scripts/: extract_ground_truth_saliency_maps.py  preprocess_collected_data.py
tests/: conftest.py
tests/config/: test_base_config.py
tests/data/: test_base_dataset.py  test_hf_dataset.py
tests/entities/: test_session.py
tests/fixtures/: raw_head_orientation_log.json  subtitle.srt
tests/helpers/: test_coordinate_converter.py  test_orthodromic_distance.py
tests/metrics/: test_orthodromic_distance.py  test_rmse.py
tests/models/: test_base_model.py  test_ieee_letter_2020.py
tests/preprocessors/: test_head_orientation.py  test_saliency.py  test_subtitle.py
tests/utils/: test_image.py  test_serializer.py  test_video.py
viewport_prediction/: cli.py  experiment.py  types.py
viewport_prediction/config/: __init__.py  base_config.py  experiment_config.py
viewport_prediction/data/: __init__.py  base_dataset.py  hf_dataset.py
viewport_prediction/entities/: __init__.py  session.py
viewport_prediction/helpers/: __init__.py  coordinate_converter.py  orthodromic_distance.py
viewport_prediction/metrics/: __init__.py  base_metric.py  orthodromic_distance.py  rmse.py
viewport_prediction/models/: __init__.py  base_model.py  ieee_letter_2020.py
viewport_prediction/preprocessors/: __init__.py  head_orientation.py  saliency.py  subtitle.py
viewport_prediction/utils/: __init__.py  console.py  image.py  rmse.py  round_to_half.py  serializer.py  video.py
viewport_prediction/visualization/: __init__.py  animate_viewport.py  visualize_head_orientation_in_3d.py
(+118 files in other folders)
